--- a/p2/src/components/components.css
+++ b/p2/src/components/components.css
@@ -1,11 +1,52 @@
-.content{
-  background-color: black;
-  color: white;
+.wrapper {
+  margin: 10px;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+}
+
+.item_header {
+  grid-column: 1/9;
+}
+
+.item_themeButton {
+  grid-column: 1/2;
+  text-align: end;
+}
+
+.item_audio {
+  grid-column: 2/6;
   text-align: center;
-  margin: auto;
+
+}
+
+.item_audioSelect {
+  grid-column: 1/2;
+  text-align: end;
+}
+
+
+.item_imgSelect {
+  grid-column: 1/2;
+  text-align: end;
+}
+
+.item_img {
+  grid-column: 2/6;
+}
+
+
+.item_poem {
+  grid-column: 6/8;
+  text-align: center;
+}
+
+.content{
+  text-align: center;
+  margin-top: 50px;
   padding: 20px;
-  border: 5px solid white;
-  width: 400px;
+  border: 5px solid darkgrey;
 }
 .content > p{
   margin: 0;
@@ -14,7 +55,6 @@
 .poem_title, .poem_author{
   font-weight: bold;
   font-variant: small-caps;
-  color: white;
   padding-bottom: 10px;
 }
 
@@ -30,42 +70,38 @@
 #image_container{
   display: block;
   margin: 0px auto;
-  width: 60%;
+  width: 90%;
 }
 
 .drop_down, .drop_down > option {
-  margin: 0 10px;
   border: solid 2px;
   background-color: black;
-  color: white;
+  color: #F4F5F7;
+  width: 5em;
   font-size: 24px;
   font-family: courier;
   font-weight: bold;
   font-variant: small-caps;
   padding: 10px;
-  width: 6em;
 }
 
 button{
-  display: block;
   font-size: 24px;
   font-family: courier;
   font-weight: bold;
   font-variant: small-caps;
-  margin: 20px auto;
-  width: 170px;
-  height: 46px;
-  border: solid 2px white;
+  padding: 10px;
+  border: solid 2px #F4F5F7;
   border-radius: 5px;
   text-align: center;
-  color: white;
+  color: #F4F5F7;
   background: black;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: bold;
 }
 
 button:hover{
-  border: solid 2px white;
-  background: white;
+  border: solid 2px #F4F5F7;
+  background: #F4F5F7;
   color: black;
 }
